Bug 1237595 - FormData ctor and form submission should create empty Blob/File when a input type=file is not set, r=smaug